rpi5/trailarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: trailarr
  labels:
    app: trailarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trailarr
  serviceName: trailarr
  template:
    metadata:
      name: trailarr
      labels:
        app: trailarr
    spec:
      containers:
        - name: trailarr
          image: nandyalu/trailarr:0.2.2-beta@sha256:944148d1333a3f70f53b2572b89131b0f44ecdd19f5fb3f9dd0869267a97c32f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7889
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              memory: 1Gi
          livenessProbe:
            httpGet:
              port: 7889
              path: /status
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 7889
              path: /status
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: data
          hostPath:
            path: /data
            type: Directory
      nodeSelector:
        kubernetes.io/hostname: odroid-h4
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
