rpi5/trailarr/oauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-proxy
  namespace: trailarr
  labels:
    app: oauth-proxy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oauth-proxy
  template:
    metadata:
      name: oauth-proxy
      labels:
        app: oauth-proxy
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: oauth-proxy
      containers:
        - name: oauth-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.8.1@sha256:d62e2d81c6f5048f652f67c302083be1272c181b971fad80e5a30ebe2b8b75d8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4180
              protocol: TCP
          livenessProbe:
            httpGet:
              port: 4180
              path: /ping
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 4180
              path: /ready
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
            limits:
              memory: 16Mi
          securityContext:
            runAsUser: 10001
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: trailarr-auth
  namespace: trailarr
spec:
  selector:
    app: oauth-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4180
  type: ClusterIP
