rpi5/trailarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trailarr
  namespace: trailarr
spec:
  selector:
    app: trailarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7889
  type: ClusterIP
