rpi5/trailarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trailarr
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`trailarr.local`) || Host(`trailarr.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: trailarr-auth
          port: 80
  tls:
    secretName: trailarr-cert-tls
    domains:
      - main: trailarr.local
        sans:
          - trailarr.internal
